<resources>

    <string name="app_name">Bezati</string>
    <string name="title_activity_main2">MoneyManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Chart</string>
    <string name="menu_departments">Categorize</string>
    <string name="menu_add_element">Add New Item</string>

    <string name="name_element">Item Name</string>
    <string name="name_department">Category</string>
    <string name="value">Value</string>
    <string name="notes">Notes</string>

    <string name="there_is_no_items">There is no Items Yet add category firstly then add item</string>


    <string name="you_must_add_element">Firstly You must add Category ( Expense &amp; Income ) </string>
    <string-array name="currency">
        <item>USD</item>
        <item>EUR</item>
        <item>UK</item>
        <item>SAR</item>
        <!--<item>L.E</item>-->
    </string-array>
    <string-array name="day">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>

    </string-array>

    <string-array name="icon">
        <item>Food</item>
        <item>Home</item>
        <item>Personal</item>
        <item>Salary</item>
        <item>Saving</item>
        <item>Shopping</item>
        <item>Child</item>
        <item>Car</item>
        <item>installment</item>
        <item>Credit</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="enter_income_name">Income Name</string>
    <string name="enter_income_value">Income Value</string>
    <string name="enter_imcome_name">Income Name</string>
    <string name="error_load_data">Error While Loading Data</string>

    <string name="sign_up"><u>Sign Up</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint_enter_email">Email</string>
    <string name="login_hint_enter_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="complete_login_enter_name">Name</string>
    <string name="complete_login_salary">salary</string>
    <string name="complete_login_enter_start_month">Enter start month</string>
    <string name="complete_login_title">Complete data</string>
    <string name="nav_myaccount">My Account</string>
    <string name="nav_category">Category</string>
    <string name="nav_account">Account</string>
    <string name="nav_expect">Expect</string>
    <string name="nav_monthly_statics">Monthly statics</string>
    <string name="nav_calender">Calender</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_choosedate">ChooseDate</string>
    <string name="add_item_title">Add item</string>
    <string name="add_item_item_name">Item name</string>
    <string name="add_item_add_note">Add note</string>
    <string name="add_item_btn_ok">Ok</string>
    <string name="add_item_btn_cancel">Cancel</string>
    <string name="row_expected_target">Target</string>
    <string name="row_expected_expense">Expense</string>
    <string name="row_expected_percentage">Percentage</string>
    <string name="row_expected_hint_target">100 SAR</string>
    <string name="row_expected_hint_percentage">70%</string>
    <string name="row_expected_hint_expense">70 SAR</string>
    <string name="setting_currency">Currency</string>
    <string name="setting_kind_currency">SAR</string>
    <string name="setting_first_day_of_week">First Day of week</string>
    <string name="setting_first_day_on_month">first day on month</string>
    <string name="setting_password_protection">Password Protection</string>
    <string name="setting_daily_alert">Daily alert</string>
    <string name="setting_budget">Budget</string>
    <string name="setting_export_file">Export file</string>
    <string name="setting_create_data_backup">Create data backup</string>
    <string name="seeting_delete_database">Delete database</string>
    <string name="budget_title">Budget</string>
    <string name="budget_descripe">Monthly budget mode how much you want to spent in month</string>
    <string name="budget_value">0.0</string>
    <string name="budget_btn_cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="select_currency_title">Select Currency</string>
    <string name="select_language_title">Select Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="le">LE</string>
    <string name="kdw">KDW</string>
    <string name="dollar">Dollar</string>
    <string name="rsa">SAR</string>
    <string name="account_cash">Cash</string>
    <string name="account_payment_card">Payment card</string>
    <string name="account_new_teansfer">new Transfer</string>
    <string name="account_title">Account title</string>
    <string name="expected_title">Expected</string>
    <string name="category_tv_expense">Expense</string>
    <string name="login_toolbar">Login</string>
    <string name="add_new_item">Add new item</string>
    <string name="calender_activity_titl">Calender</string>
    <string name="cash_activity_title">Cash</string>
    <string name="category_activity_title">Category</string>
    <string name="chart_activity_title">Chart</string>
    <string name="choose_date_activity_title">Choose date</string>
    <string name="credit_activity_title">Payment Card</string>
    <string name="new_transfer_activity_title">New transfer</string>
    <string name="personal_account_activity_title">Personal account</string>
    <string name="complete_login_btn_next">Register</string>
    <string name="item_detail_title">Item detail</string>
    <string name="item_detail_update">update</string>
    <string name="category_detail_title">Category detail</string>
    <string name="item_detail_delete">Delete</string>
    <string name="all_item_category_title">All item</string>
    <string name="edit_category">Edit category</string>
    <string name="nav_log_out">LogOut</string>
    <string name="tv_name">Name</string>
    <string name="tv_email">Email</string>
    <string name="forget_Password">Reset new password</string>
    <string name="forget_password_reset">VERIFY</string>
    <string name="verifing_title_dialog">VERIFYING</string>
    <string name="verifiy_code">Enter verifying code</string>
    <string name="login_hint_enter_password_new">Enter new password</string>

    <string name="reset_new_password">Please enter code has send to email and new password</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Enter old Password</string>
    <string name="new_password">Enter new password</string>
    <string name="done">Done</string>
    <string name="choose_date_btn_done">Done</string>
    <string name="all_item_inday">All item in day</string>
    <string name="complete_data">Please Complete data ...</string>
    <string name="no_changes">No data changes</string>
    <string name="update_done">Update Done</string>
    <string name="delete">Delete done</string>
    <string name="add_done">Add done</string>
    <string name="select_day">Please select day</string>
    <string name="budget_done">Budget Done</string>
    <string name="delete_done">Delete All Database</string>
    <string name="download_progress">Download on progress</string>
    <string name="complete_download">Download Complete</string>
    <string name="setting_download">\"Sorry Error happen\"</string>
    <string name="category_budget">your Budget through current month :</string>
    <string name="chart_income">Expect</string>
    <string name="chart_expense">Expense</string>
    <string name="setting_language">Language</string>
    <string name="login_message">please wait </string>
    <string name="check_email_login">please check email correctly</string>
    <string name="sucess_login">Success login</string>
    <string name="create_account">Create Account</string>
    <string name="content">Please wait...</string>
    <string name="error_happen">Sorry Error</string>
    <string name="daily">DAILY</string>
    <string name="claender">Calender</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="price_item">Price</string>

    <string name="food">Food</string>
    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="salary">Salary</string>
    <string name="saving">Saving</string>
    <string name="shopping">Shopping</string>
    <string name="child">Child</string>
    <string name="car">Car</string>
    <string name="kast">installment</string>
    <string name="credit">Credit</string>
    <string name="create_new_account">Don`t have an Account?</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="income">Income</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Item Price</string>
    <string name="price">Price</string>
    <string name="item_note">Item Note</string>

    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>
    <string name="month13">Invalid Month</string>
    <string name="remove_budget">Remove Budget</string>

    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_week">Weak password</string>
    <string name="not_correct_email">Not correct email</string>
    <string name="no_item_added">No item added</string>

    <string name="add_new_income">Add new income</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="enter_expense_value">Enter expense value</string>
    <string name="enter_expense_name">Enter expense name</string>
    <string name="add">Add</string>
    <string name="no_expected_until_now">No expected until now</string>
    <string name="no_statics_until_now">No statics until now</string>
    <string name="update">Update</string>
    <string name="error_happen_server">please enter valid email or password</string>
    <string name="fail_to_send">Failed to Send Email</string>
    <string name="email_not_found">Email Not Found In System Please Get Register</string>
    <string name="make_alert">make alert</string>
    <string name="remove_alert">Remove alert</string>
    <string name="change_password_sucessful">Password Changed Successfully</string>
    <string name="change_password_failed">Password Changed Failed</string>
    <string name="create_account_sucess">Create account success</string>
    <string name="reset">Reset</string>
    <string name="expense">Expense</string>

    <string name="select_day_spinner">Select Day</string>
    <string name="wait">please, wait .. </string>
    <string name="remove_budget_builder">Are you sure you want to remove the budget ? </string>
    <string name="yes_remove">yes</string>
    <string name="no_remove">No</string>

    <string name="negative">you have spent more than expected</string>


</resources>
