<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"


    >

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_my_account"
            android:title="@string/nav_myaccount" />
        <item
            android:id="@+id/nav_category"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_expect"
            android:title="@string/nav_expect" />

        <item
            android:id="@+id/nav_monthly_static"
            android:title="@string/nav_monthly_statics" />

        <item
            android:id="@+id/nav_calender"
            android:title="@string/nav_calender" />

        <item
            android:id="@+id/nav_choose_date"
            android:title="@string/nav_choosedate" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_log_out" />

    </group>


</menu>
