<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mab.moneymanagement.view.fragment.SettingFragment">

    <!-- TODO: setting activity to control application  -->

    <CheckedTextView
        android:id="@+id/setting_check_tv_budget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkMark="@drawable/checked"
        android:checked="false"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:text="@string/setting_budget" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/setting_tv_select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/setting_language"
            android:textColor="@android:color/black"
            android:textSize="15dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:padding="5dp"
            android:hint="@string/setting_language"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/setting_select_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/setting_currency"
            android:textColor="@android:color/black"
            android:textSize="15dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:padding="5dp"
            android:hint="@string/setting_kind_currency"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/setting_tv_first_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/setting_first_day_of_week"
            android:textColor="@android:color/black"
            android:textSize="15dp"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:padding="5dp"
            android:hint="sunday"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/setting_tv_first_day_of_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/setting_first_day_on_month"
            android:textColor="@android:color/black"
            android:textSize="15dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:padding="5dp"
            android:text=" 23"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/setting_tv_password_protection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:text="@string/setting_password_protection"
        android:textColor="@android:color/black"
        android:textSize="15dp"

        />

    <CheckedTextView
        android:id="@+id/setting_check_tv_daily_alert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkMark="@drawable/checked"
        android:checked="false"
        android:padding="5dp"
        android:layout_margin="15dp"
        android:text="@string/setting_daily_alert" />

    <TextView
        android:id="@+id/setting_tv_export_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:text="@string/setting_export_file"
        android:textColor="@android:color/black"
        android:textSize="15dp"

        />

    <TextView
        android:id="@+id/setting_create_backup_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:text="@string/setting_create_data_backup"
        android:textColor="@android:color/black"
        android:textSize="15dp"

        />

    <TextView
        android:id="@+id/setting_delete_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:text="@string/seeting_delete_database"
        android:textColor="@android:color/black"
        android:textSize="15dp"

        />

</LinearLayout>
