<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/budget_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/budget_title"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView

            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/budget_descripe"

            android:textColor="@color/colorWhite" />

        <EditText

            android:textColorHint="@color/colorWhite"
            android:background="@drawable/edit_text_border"
            android:id="@+id/budget_et_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/budget_value"
            android:inputType="number"
            android:padding="8dp" />

    </LinearLayout>

    <LinearLayout

        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <Button
            android:layout_weight="1"
            android:id="@+id/budget_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@android:color/white"
            android:padding="10dp"
            android:text="@string/budget_btn_cancel"

            android:textColor="@color/colorPrimary" />

        <Button
            android:layout_weight="1"
            android:id="@+id/budget_btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"

            />

    </LinearLayout>
</LinearLayout>