<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/verifing_title_dialog"
        android:textColor="@android:color/white"
        />




    <TextView

        android:gravity="center"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:text="@string/reset_new_password"
        android:layout_marginBottom="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <EditText
            android:gravity="center"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify_password_code"
            android:hint="@string/verifiy_code"
            android:padding="8dp"
            android:inputType="number"
            android:layout_margin="10dp"

            />

        <EditText
            android:gravity="center"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify_password_new_password"
            android:hint="@string/login_hint_enter_password_new"
            android:padding="8dp"
            android:layout_margin="10dp"

            />




    </LinearLayout>

</LinearLayout>