<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:textSize="25sp"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:layout_marginBottom="50dp"


        />

    <EditText

        android:gravity="center"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_et_password_old"
        android:hint="@string/old_password"
        android:padding="8dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"


        />
    <EditText
        android:gravity="center"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_et_password_new"
        android:hint="@string/new_password"
        android:padding="8dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"


        />
</LinearLayout>