<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background"

    >


    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/add_new_expense"
        android:textColor="@android:color/white"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <EditText

            android:background="@drawable/edit_text_border"
            android:id="@+id/add_expense_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_expense_name"
            android:padding="10dp"

            />

        <EditText
            android:id="@+id/add_expense_et_value"
android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_expense_value"
            android:inputType="number"
            android:padding="10dp"

            />

        <ImageView
            android:id="@+id/add_expense_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"

            />

        <Spinner
            android:id="@+id/spinner_icons_new_expence"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:padding="10dp"

            ></Spinner>
    </LinearLayout>

</LinearLayout>